// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should add a class to the element 1`] = `
<svg
  aria-hidden="true"
  class="lucide-icon lucide lucide-face-slightly-smiling my-icon"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <!---->
  <path
    d="M15 10V9"
  >
    
  </path>
  
  <!---->
  <path
    d="M16.472 15a6 6 0 01-8.943 0"
  >
    
  </path>
  
  <!---->
  <path
    d="M9 10V9"
  >
    
  </path>
  
  <!---->
  <circle
    cx="12"
    cy="12"
    r="10"
  >
    
  </circle>
  
  <!---->
  <!---->
</svg>
`;

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="lucide-icon lucide lucide-face-slightly-smiling"
    fill="none"
    height="48"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="4"
    viewBox="0 0 24 24"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <!---->
    <path
      d="M15 10V9"
    >
      
    </path>
    
    <!---->
    <path
      d="M16.472 15a6 6 0 01-8.943 0"
    >
      
    </path>
    
    <!---->
    <path
      d="M9 10V9"
    >
      
    </path>
    
    <!---->
    <circle
      cx="12"
      cy="12"
      r="10"
    >
      
    </circle>
    
    <!---->
    <!---->
  </svg>
  
</div>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="1"
     stroke-linecap="round"
     stroke-linejoin="round"
     aria-hidden="true"
     class="lucide-icon lucide lucide-face-slightly-smiling"
>
  <path d="M15 10V9">
  </path>
  <path d="M16.472 15a6 6 0 01-8.943 0">
  </path>
  <path d="M9 10V9">
  </path>
  <circle cx="12"
          cy="12"
          r="10"
  >
  </circle>
</svg>
`;

exports[`Using lucide icon components > should render an component 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="lucide-icon lucide lucide-face-slightly-smiling"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <!---->
    <path
      d="M15 10V9"
    >
      
    </path>
    
    <!---->
    <path
      d="M16.472 15a6 6 0 01-8.943 0"
    >
      
    </path>
    
    <!---->
    <path
      d="M9 10V9"
    >
      
    </path>
    
    <!---->
    <circle
      cx="12"
      cy="12"
      r="10"
    >
      
    </circle>
    
    <!---->
    <!---->
  </svg>
  
</div>
`;

exports[`Using lucide icon components > should render an icon slot 1`] = `
<div>
  <svg
    class="lucide-icon lucide lucide-face-slightly-smiling"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <!---->
    <path
      d="M15 10V9"
    >
      
    </path>
    
    <!---->
    <path
      d="M16.472 15a6 6 0 01-8.943 0"
    >
      
    </path>
    
    <!---->
    <path
      d="M9 10V9"
    >
      
    </path>
    
    <!---->
    <circle
      cx="12"
      cy="12"
      r="10"
    >
      
    </circle>
    
    <!---->
    <text>
      Test
    </text>
    <!---->
  </svg>
  
</div>
`;
